--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,6 +1,6 @@
 mountpoints:
   /:
-    url: "https://drive.google.com/drive/folders/1dh4rx9vmi5tt8OM7CXFarz8v1pZjJeoq"
+    url: "https://drive.google.com/drive/folders/1LoAVFPNYr9VFGJzQUw7RrwMueqSsVLUm?ths=true"
     type: "markup"
     suffix: ".html"
 
